--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.43.9",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
+    "sweetalert2": "^11.7.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
