--- a/portfolio/.env
+++ b/portfolio/.env
@@ -1,8 +1,9 @@
 BROWSER = none
+HTTPS=true
 REACT_APP_APIKEY= "AIzaSyAxSTi24weGhCD_zVIRKtbbqI1WW2fHr4s"
 REACT_APP_AUTHDOMAIN= "practicetobias.firebaseapp.com"
 REACT_APP_PROJECTID= "practicetobias"
 REACT_APP_STORAGEBUCKET= "practicetobias.appspot.com"
 REACT_APP_MESSAGINGSENDERID= "384257863555"
 REACT_APP_APPID= "1:384257863555:web:d93c5fb6b740d581a750b6"
-REACT_APP_PUBLIC_URL= 'http://localhost:3000'
+REACT_APP_PUBLIC_URL= 'https://192.168.137.1:3000'
